fix: Vertical tech specs' text alignment
- Wrapped the SVG icons in a box of fixed height, as large as the largest icon
- Note that default icon size is 32px
- Custom icon sizes are specified in `devices.json`, under the `specs` keys.

--- a/src/content/dam/wbx/us/images/workspace/styles/_modals.scss
+++ b/src/content/dam/wbx/us/images/workspace/styles/_modals.scss
@@ -295,17 +295,15 @@ $list-items-border-color: #c4c4c4;
             }
 
 
-            .ws-missing-icon {
+            .ws-icon-holder {
               display: block;
               margin: 52px auto 20px;
-              width: 32px;
-              height: 32px;
+              height: 33px;
             }
 
             svg.ws-icon {
               display: block;
-              margin: 52px auto 20px;
-
+              margin: 0 auto;
               // The dimensions are set in specs.njk
               width: unset;
               height: unset;
